--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 body {
   background-color: #F5F5F5;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.2;
 }
 
 div#header {
@@ -32,7 +33,7 @@ div#logo {
 
 div#nav {
   position: absolute;
-  height: 46px;
+  height: 47px;
   bottom: 0px;
   right: 70px;
   background-color: black;
