--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,16 @@ body {
   background-color: #F5F5F5;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2;
+  font-size: 16px;
 }
 
+p{
+  font-size: 100%;
+}
+
+h1{
+  font-size: 200%;
+}
 div#header {
   position: absolute;
   margin: auto;
