--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 /*-----------header-----------------*/
 
-html{
-  font-size: 16px;
-}
-
-@media(min-width:60em){
-  html{
-    font-size: 200%;
-  }
-}
-
 body {
   background-color: #F5F5F5;
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.2;
-  font-size: 100%;
+  line-height: 1.2em;
+  font-size: 16px;
 }
 
 p{
