--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 body {
   /*background-color: #F5F5F5;*/
-  background-color: white;
+  background-color: yellow;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2em;
   font-size: 16px;
