--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 /*-----------header-----------------*/
 
+{margin:0;padding:0;}
+
+html{
+  height: 100%;
+}
 body {
   /*background-color: #F5F5F5;*/
+  margin: 0;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.2em;
   font-size: 16px;
+  height: 100%;
 }
 
 p{
@@ -18,12 +25,13 @@ h1{
 }
 div#header {
   position: absolute;
-  margin: auto;
-  top: 35px;
+  font-size: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  top: 12px;
   left: 0px;
   right: 0px;
   width: 1050px;
-  margin: auto;
   border-top: 3px solid #ffd100;
   border-bottom: 3px solid #ffd100;
 }
@@ -121,27 +129,23 @@ div#search {
 #me{
   height: 150px;
   weight: 150px;
-  margin-right: 0px;
-  margin-left: 15px;
-  margin-top: 0px;
-  margin-bottom: 15px;
+  padding-right: 0px;
+  padding-left: 15px;
+  padding-top: 0px;
+  padding-bottom: 15px;
   float: right;
 }
 
 .pictype1 {
   float: right;
-  margin: 0px 0px 15px 15px;
-}
-
-.homenav{
-
+  padding: 0px 0px 15px 15px;
 }
 
 .homepics{
   height: 175px;
   width: 190px;
   float: left;
-  margin-right: 10px;
+  padding-right: 10px;
 }
 
 
@@ -175,30 +179,48 @@ a:active{
 
 
 
-
 /*-----------Page-----------*/
+#wrap {min-height: 100%;}
+
 div#page {
-  position: absolute;
-  margin: auto;
-  bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
   font-family: 'Roboto', sans-serif;
   text-align: justify;
-  top: 145px;
   width: 900px;
-  left: 0px;
-  right: 0px;
+  overflow:auto;
+  padding-top: 125px;
+	padding-bottom: 50px;
 }
 
 
 /*-----------footer-----------------*/
-div#footer {
-  position: absolute;
-  margin: auto;
-  color: black;
-  width: 100%;
-  height: 50px;
-  border-top: 5px solid #ffd100;
-  background-color: black;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+#footer {
+  position: relative;
+  background-color: white;
+	margin-top: -50px; /* negative value of footer height */
+	height: 50px;
+	clear:both;
+  color: gray;
 }
+.footernav{
+  text-align: center;
+  font-size: 80%;
+  padding-top: 25px;
+}
+.footlink{
+  color: gray;
+  text-decoration: none;
+}
+.footlink:visited{
+  color: gray
+}
+.footlink:hover{
+  color: #ffc300;
+}
+.footlink:active{
+  color: #ffc300;
+}
+/*----------------------------------------------------------*/
