--- a/css/main.css
+++ b/css/main.css
@@ -156,8 +156,8 @@ div#search {
 }
 
 .homepics{
-  height: 175px;
-  width: 190px;
+  height: 140px;
+  width: 156px;
   float: left;
   padding-right: 10px;
 }
@@ -173,7 +173,6 @@ div#search {
   display: flex;
   text-align: center;
   justify-content: center;
-
 }
 
 a{
@@ -191,21 +190,29 @@ a:active{
 }
 
 
+.homenav{
+  height: 140px;
+  width: auto;
+}
+.extra{
+  margin-bottom: 2em;
+}
+
+
 
 /*-----------Page-----------*/
 #wrap{
   padding-left: 10px;
   min-height: 100%;
+  margin: auto;
+  width: 900px;
+  font-family: 'Roboto', sans-serif;
 }
 
 div#page {
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 0px;
   margin-bottom: 0px;
-  font-family: 'Roboto', sans-serif;
   text-align: justify;
-  width: 900px;
   overflow:auto;
   padding-top: 125px;
 	padding-bottom: 50px;
