--- a/css/main.css
+++ b/css/main.css
@@ -141,12 +141,11 @@ div#search {
 }
 
 #me{
-  height: 150px;
-  weight: 150px;
-  padding-right: 0px;
-  padding-left: 15px;
-  padding-top: 0px;
-  padding-bottom: 15px;
+  height: 9em;
+  padding-right: 0em;
+  padding-left: 1em;
+  padding-top: 0em;
+  padding-bottom: 1em;
   float: right;
 }
 
@@ -195,7 +194,7 @@ a:active{
   width: auto;
 }
 .extra{
-  
+
 }
 
 
