--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 /*-----------header-----------------*/
 
-{margin:0;padding:0;}
+* {font-size: 16px;}
 
 html{
   height: 100%;
@@ -24,9 +24,11 @@ p{
 }
 
 h1{
+  font-size: 175%;
   margin-bottom: .5em;
 }
 h2{
+  font-size: 150%;
   margin-bottom: .5em;
 }
 li{
