--- a/css/main.css
+++ b/css/main.css
@@ -159,8 +159,8 @@ div#search {
   padding-bottom: .75em;
   float: right;
 
-  width: 150px;
-  max-width: 100%;
+  width: 17%;
+  max-width: 300px;
   height: auto;
 }
 
