--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+@media only screen and (max-width: 960px){
+  img{
+    max-width: 100%;
+  }
+}
+
 /*-----------header-----------------*/
 
 * {font-size: 16px;}
@@ -152,15 +159,13 @@ div#search {
 }
 
 #me{
-
   padding-right: 0em;
   padding-left: .75em;
   padding-top: 0em;
   padding-bottom: .75em;
-  
+  float: right;
 
-  width: 17%;
-  max-width: 600px;
+  width: 9em;
   height: auto;
 }
 
