--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ div#logo {
 div#nav {
   position: absolute;
   height: 47px;
-  width: auto;
+  width: 534.05px;
   bottom: 0px;
   right: 70px;
   background-color: black;
