--- a/css/main.css
+++ b/css/main.css
@@ -87,10 +87,13 @@ div#nav {
 }
 
 ul#menu {
+  position: absolute;
+  height: 47px;
+  width: 534.05px;
   list-style-type: none;
   margin: 0;
   padding: 0;
-
+  overflow: hidden;
   background-color: black;
 }
 ul#menu li {
@@ -107,7 +110,7 @@ ul#menu li a {
   color: white;
   font-weight: bold;
   text-align: center;
-  
+  padding: 14px 16px;
   text-decoration: none;
 }
 
@@ -217,7 +220,9 @@ a:active{
   color: red;
 }
 
-
+ul#menucircuits{
+  font-size: 300%;
+}
 
 
 /*-----------Page-----------*/
