--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ ul#menu li:last-child {
 }
 ul#menu li a {
   display: block;
-  margin: 0;
+  margin: auto;
   color: white;
   font-weight: bold;
   text-align: center;
@@ -220,8 +220,8 @@ a:active{
   color: red;
 }
 
-ul#menucircuits{
-  font-size: 300%;
+#menucircuits a{
+  font-size: 150%;
 }
 
 
