--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,10 @@
 
+@media only screen and (max-width: 500px) {
+    #menu {
+        display: block;
+    }
+}
+
 div#header {
   position: absolute;
   font-size: 100%;
