--- a/css/test.css
+++ b/css/test.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
-    background-color: white
+    background-color: white;
+}
+
+img{
+    
+    max-width: 100%;
+    height: auto;
 }
 
 #menu{
