--- a/css/test.css
+++ b/css/test.css
@@ -5,9 +5,11 @@ body {
 }
 
 img{
-    width: 200px;
+    width: 500px;
     max-width: 100%;
+    margin: auto;
     height: auto;
+    display: block;
 }
 
 #menu{
