--- a/css/test.css
+++ b/css/test.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+html{
+  height: 100%;
+}
 body {
     background-color: white;
+    line-height: 1.2em;
+    height: 100%;
 }
 
 img{
-    width: 500px;
+    width: 360px;
     max-width: 100%;
     margin: auto;
     height: auto;
@@ -16,18 +21,28 @@ img{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: blue;
+    background-color: black;
     width: auto;
-
 }
 #menu a{
+    text-decoration: none;
     display: block;
     text-align: center;
+    color: white;
+    padding: 1px;
+}
+
+#menu .active{
+    background-color: #ffd100;
+    color: black;
 }
 
 
 @media only screen and (min-width: 1000px) {
     body {
         background-color: lightblue;
+    }
+    img{
+      width: 300px;
     }
 }
