--- a/css/test.css
+++ b/css/test.css
@@ -18,6 +18,7 @@ body{
     margin: auto;
     height: auto;
     display: block;
+    margin-bottom: 1em;
 }
 
 #menu{
@@ -32,7 +33,7 @@ body{
     display: block;
     text-align: center;
     color: white;
-    padding: 1px;
+    padding: 4px 0;
 }
 #menu .active{
     background-color: #ffd100;
