--- a/css/test.css
+++ b/css/test.css
@@ -39,6 +39,9 @@ body{
     background-color: #ffd100;
     color: black;
 }
+#menu li:last-child{
+    display: none;
+}
 
 
 @media only screen and (min-width: 1000px) {
