--- a/css/test.css
+++ b/css/test.css
@@ -18,7 +18,7 @@ body{
     margin: auto;
     height: auto;
     display: block;
-    margin-bottom: 1em;
+    margin-bottom: 16px;
 }
 
 #menu{
@@ -34,6 +34,7 @@ body{
     text-align: center;
     color: white;
     padding: 4px 0;
+    font-weight: bold;
 }
 #menu .active{
     background-color: #ffd100;
@@ -50,5 +51,8 @@ body{
     }
     img{
       width: 300px;
+    }
+    #menu li:last-child{
+        display: block;
     }
 }
