--- a/css/test.css
+++ b/css/test.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 html{
-  height: 100%;
+    height: 100%;
 }
 body{
     margin-top: 0;
@@ -18,7 +18,7 @@ body{
     margin: auto;
     height: auto;
     display: block;
-    padding: 8px;
+    padding: 8px 0;
 }
 
 #menu{
