--- a/css/test.css
+++ b/css/test.css
@@ -70,9 +70,9 @@ h2{
 
 #wrap{
     min-height: 100%;
-  	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+  	height: auto !important;
   	height: 100%;
-  	margin: 0 auto -50px; /* the bottom margin is the negative value of the footer's height */
+  	margin: 0 auto -50px;
 }
 
 #push {
@@ -87,6 +87,7 @@ h2{
     color: gray;
 }
 .footernav{
+    display: block;
     height: auto;
     width: auto;
     text-align: center;
