--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,9 @@ h2{
     margin-bottom: 8px;
 }
 
+#header{
+    width: auto;
+}
 #menu{
     list-style-type: none;
     margin: 0;
@@ -69,7 +72,6 @@ h2{
     background-color: black;
     width: auto;
     line-height: 30px;
-
 }
 #menu a{
     text-decoration: none;
@@ -78,6 +80,7 @@ h2{
     color: white;
     font-weight: bold;
 }
+
 #menu .active{
     background-color: #ffd100;
     color: black;
@@ -91,7 +94,6 @@ h2{
     float: right;
     padding: 10px 16px;
     background-color:  #ffd100;
-
     font-size: 20px;
     color: black;
     cursor: pointer;
@@ -104,11 +106,9 @@ h2{
 
 .nav{
     display: none;
+
 }
-#menuToggle:checked  + .nav {display: block;}
-
-
-
+#menuToggle:checked  ~ .nav {display: block;}
 
 
 
@@ -117,12 +117,12 @@ h2{
   	height: auto !important;
   	height: 100%;
   	margin: 0 auto -48px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #page{
     text-align: justify;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 #push {
     height: 48px;
