--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@ html{
     height: 100%;
 }
 body{
-    margin-top: 0;
-    margin-bottom: 0;
+
+    margin: 0;
     background-color: white;
     font-size: 16px;
     line-height: 1.2em;
@@ -48,24 +48,35 @@ h2{
     font-weight: bold;
 }
 
-
-
 #logo{
-    width: 360px;
+    width: 156px;
     max-width: 100%;
     height: auto;
-    margin: auto;
+    float: left;
 }
 #title{
-    width: 360px;
+    width: auto;
     padding: 0;
     margin: 0;
     padding-top: 8px;
-    margin-bottom: 8px;
+}
+
+#top{
+    overflow: hidden;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+    padding-left: 14px;
+    padding-right: 14px;
+    background-color: #ffd100;
+    border-bottom: 5px solid black;
+    padding-bottom: 4px;
 }
 
 #header{
     width: auto;
+
+
 }
 #menu{
     list-style-type: none;
@@ -75,12 +86,17 @@ h2{
     width: auto;
     line-height: 30px;
 }
+#menu li{
+
+    border-top: 1px solid gray;
+}
+
 #menu a{
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    color: white;
-    font-weight: bold;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  color: white;
+  font-weight: bold;
 }
 
 #menu .active{
@@ -88,20 +104,17 @@ h2{
     color: black;
 }
 
-
-
 #menubox{
+    margin-top: 12px;
     overflow: hidden;
 }
 .menu-icon{
     float: right;
     padding: 10px 16px;
-    background-color:  #ffd100;
     font-size: 20px;
     color: black;
     cursor: pointer;
     border-radius: 5px;
-    margin-bottom: 5px;
 }
 #menuToggle{
     display: none;
@@ -109,9 +122,11 @@ h2{
 
 .nav{
     display: none;
-
 }
-#menuToggle:checked  ~ .nav {display: block;}
+#menuToggle:checked  ~ .nav {display: block}
+#menuToggle:checked  ~ #top {border-bottom: 0px;}
+#menuToggle:checked  ~ #top > #menubox > .menu-icon{background-color: #C6A200;}
+
 
 
 
@@ -120,12 +135,12 @@ h2{
   	height: auto !important;
   	height: 100%;
   	margin: 0 auto -48px;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 #page{
     text-align: justify;
+    margin-left: 14px;
+    margin-right: 14px;
 }
 #push {
     height: 48px;
@@ -151,10 +166,10 @@ h2{
     color: gray
 }
 #footer a:hover{
-    color: #ffc300;
+    color: #ffd100;
 }
 #footer a:active{
-    color: #ffc300;
+    color: #ffd100;
 }
 
 .homenav{
