--- a/css/main.css
+++ b/css/main.css
@@ -87,16 +87,17 @@ h2{
     line-height: 30px;
 }
 #menu li{
-
     border-top: 1px solid gray;
 }
-
+#menu li:first-child{
+    border-top: 0px;
+}
 #menu a{
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  color: white;
-  font-weight: bold;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    color: white;
+    font-weight: bold;
 }
 
 #menu .active{
