--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ h2{
     width: auto;
     padding: 0;
     margin: 0;
-    padding-top: 8px;
+    margin-top: 8px;
 }
 
 #top{
@@ -75,8 +75,6 @@ h2{
 
 #header{
     width: auto;
-
-
 }
 #menu{
     list-style-type: none;
@@ -98,6 +96,10 @@ h2{
     text-align: center;
     color: white;
     font-weight: bold;
+}
+#menu a:hover{
+    background-color: #ffe364;
+    color: black;
 }
 
 #menu .active{
