--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ h2{
     line-height: 30px;
 }
 #menu li{
-    border-top: 1px solid gray;
+    border-top: 0px solid gray;
 }
 #menu li:first-child{
     border-top: 0px;
@@ -98,7 +98,7 @@ h2{
     font-weight: bold;
 }
 #menu a:hover{
-    background-color: #ffe364;
+    background-color: #C6A200;
     color: black;
 }
 
