--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,6 @@ body{
     height: 100%;
     font-family: Roboto, Arial, Helvetica, sans-serif;
 }
-
-
-
 p{
     font-size: 100%;
     margin-top: 0;
@@ -84,15 +81,10 @@ h2{
     width: auto;
     line-height: 30px;
 }
-#menu li{
-    border-top: 0px solid gray;
-}
-#menu li:first-child{
-    border-top: 0px;
-}
+
 #menu a{
-    text-decoration: none;
     display: block;
+    text-decoration: none;
     text-align: center;
     color: white;
     font-weight: bold;
@@ -179,7 +171,7 @@ h2{
     display: block;
 }
 .picH{
-    width: 200px;
+    width: 150px;
     height: auto;
     margin: auto;
 }
@@ -192,28 +184,78 @@ h2{
 
 @media only screen and (min-width: 700px) {
     body {
-
+        font-size: 14px;
     }
     img{
         width: 300px;
     }
+    #wrap{
+        width: 856px;
+        max-width: 100%;
+    }
+
+    #logo{
+        width: 204px;
+        overflow: hidden;
+    }
+    .nav{
+        display: inline;
+    }
     #menu{
+        position: relative;
+        margin: 0;
+        padding: 0;
+        width: auto;
+        background-color: black;
+        float: right;
+        bottom: 38px;
+    }
+    #menu li{
+        float: left;
+        margin: 0;
+        padding: 0;
+    }
+    #menu a{
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        color: white;
+        font-weight: bold;
+        margin: 0;
+        padding: 4px 6px;
+    }
+    #top{
+        overflow: hidden;
+        padding-left: 14px;
+        padding-right: 14px;
+        background-color: #dfdfdf;
+        border-top: 4px solid black;
+        border-bottom: 4px solid black;
+    }
+    #header{
+        border-top: 3px solid #ffd100;
+        border-bottom: 3px solid #ffd100;
 
     }
-    #wrap{
-        width: 800px;
 
+    #footer{
+
+    }
+
+    .menu-icon{
+        display: none;
     }
     .homenav{
         overflow: hidden;
         height: auto;
         margin: auto;
-
     }
     .picH{
         float: left;
-        width: 156px;
+        width: 120px;
         margin-right: 10px;
     }
+
+
 
 }
