--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ p{
     font-size: 100%;
     margin-top: 0;
     margin-bottom: 1em;
+    text-align: justify;
 }
 
 img{
@@ -38,8 +39,8 @@ h1{
 h2{
     display: block;
     font-size: 1.5em;
-    margin-top: 0.83em;
-    margin-bottom: 0.83em;
+    margin-top: 0.67em;
+    margin-bottom: 0.6em;
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
@@ -133,7 +134,6 @@ h2{
 }
 
 #page{
-    text-align: justify;
     margin-left: 14px;
     margin-right: 14px;
 }
@@ -181,6 +181,10 @@ h2{
     margin-bottom: 8px;
 }
 
+.list{
+    padding-left: 14px;
+}
+
 @media only screen and (min-width: 730px) {
     #menu{
         right: 14px;
@@ -206,6 +210,9 @@ h2{
     .nav{
         display: inline;
     }
+    #page{
+        margin-top: 38px;
+    }
     #menu{
         position: relative;
         margin: 0;
@@ -213,8 +220,8 @@ h2{
         width: auto;
         background-color: black;
         float: right;
-
-        bottom: 38px;
+        top:-38px;
+        overflow: hidden;
     }
     #menu li{
         float: left;
