--- a/css/main.css
+++ b/css/main.css
@@ -9,17 +9,20 @@ body{
     margin: 0;
     background-color: white;
     font-size: 16px;
-    line-height: 1.2em;
+    line-height: 120%;
     height: 100%;
     font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 p{
     font-size: 100%;
     margin-top: 0;
-    margin-bottom: 1em;
-    text-align: justify;
+    margin-bottom: 0;
+    text-align: left;
+    line-height: 150%;
 }
-
+ul{
+    line-height: 150%;
+}
 img{
     max-width: 100%;
     height: auto;
@@ -182,7 +185,7 @@ h2{
 }
 
 .list{
-    padding-left: 16px;
+    
 }
 
 @media only screen and (min-width: 736px) {
