--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ html{
     height: 100%;
 }
 body{
-
     margin: 0;
     background-color: white;
     font-size: 14px;
@@ -38,6 +37,7 @@ h1{
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
+    line-height: 100%;
 }
 h2{
     display: block;
@@ -47,6 +47,7 @@ h2{
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
+    line-height: 100%;
 }
 
 #logo{
