--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ img{
 h1{
     display: block;
     font-size: 1.5em;
-    margin-top: 0.375em;
+    margin-top: .67em;
     margin-bottom: 0.375em;
     margin-left: 0;
     margin-right: 0;
