--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,72 @@ a:active{
     list-style: initial;
 }
 
+
+
+
+
+.thumbnail {
+    border: 1px solid #ccc;
+}
+
+.thumbnail:hover {
+    border: 1px solid #777;
+}
+
+.thumbnail img {
+    width: 100%;
+    height: auto;
+    width: 300px;
+    height: 200px;
+}
+
+.caption {
+    padding: 15px;
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.gallery {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 900px){
+    .gallery {
+        width: 20%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .gallery {
+        width: 33.3333%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .gallery {
+        width: 49.99999%;
+    }
+}
+
+
+.clearfix:after {
+    content: "";
+    display: gallery;
+    clear: both;
+}
+
+
+
+
+
+
 @media only screen and (min-width: 736px) {
     #menu{
         right: 16px;
