--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ img{
     margin: auto;
     display: block;
     margin-bottom: 1em;
+    transition: transform .2s ease-in-out;
 }
 
 h1{
@@ -219,63 +220,42 @@ a:active{
 
 
 
-
-.thumbnail {
-    border: 1px solid #ccc;
+#box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+#box a{
+    display: inline-block;
+    margin-bottom: .8em;
+    width: calc(50% - .5em);
+    text-decoration: none;
+    color: black;
 }
 
-.thumbnail:hover {
-    border: 1px solid #777;
+@media screen and (min-width: 50em) {
+  #box a{
+    width: calc(25% - 6px);
+  }
 }
 
-.thumbnail img {
-    width: 100%;
-    height: auto;
-    width: 300px;
-    height: 200px;
+figure {
+  margin: 0;
+  overflow: hidden;
 }
-
-.caption {
-    padding: 15px;
-    text-align: center;
+figcaption {
+  margin-top: 15px;
 }
+#box img {
+  border: none;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  
 
-* {
-    box-sizing: border-box;
-}
-
-.gallery {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
-}
-
-@media only screen and (max-width: 900px){
-    .gallery {
-        width: 20%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 700px){
-    .gallery {
-        width: 33.3333%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 500px){
-    .gallery {
-        width: 49.99999%;
-    }
 }
 
 
-.clearfix:after {
-    content: "";
-    display: gallery;
-    clear: both;
-}
 
 
 
