--- a/css/main.css
+++ b/css/main.css
@@ -88,8 +88,8 @@ a:active{
     height: auto;
     width: auto;
     overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 1em;
+    padding-right: 1em;
     background-color: #ffd100;
     border-bottom: 5px solid black;
     padding-bottom: 4px;
@@ -158,8 +158,8 @@ a:active{
 }
 
 #page{
-    margin-left: 16px;
-    margin-right: 16px;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 #push {
     height: 48px;
@@ -194,22 +194,27 @@ a:active{
 
 .homenav{
     display: block;
+    border: 1px solid #d0d0d0;
+    padding: 0 1em;
+    border-radius: 4px;
+    margin-top: 1em;
 }
-.picH{
-    width: 150px;
-    height: auto;
-    margin: auto;
-
-}
-.homepics{
+.homenav img{
     width: auto;
 }
+.homepic{
+    width: 250px;
+    height: auto;
+    margin: auto;
+    max-width: 100%;
+    margin-bottom: 1.2em;
+}
+
 #pic404{
     width: 300px;
 }
 #me{
     width: 300px;
-
 }
 
 .list{
@@ -269,15 +274,7 @@ figcaption {
 
 
 
-
-
-@media only screen and (min-width: 736px) {
-    #menu{
-        right: 16px;
-    }
-}
-
-@media only screen and (min-width: 720px) {
+@media only screen and (min-width: 900px) {
     body {
         font-size: 14px;
     }
@@ -291,19 +288,28 @@ figcaption {
         font-size: 1.5em;
     }
     #wrap{
-        width: 856px;
+        width: 1024px;
         max-width: 100%;
     }
 
+    #border{
+        padding-top: 1em;
+    }
     #logo{
         width: 204px;
         overflow: hidden;
+        margin-left: 5em;
     }
     .nav{
         display: inline;
     }
     #page{
+        margin: 0;
         margin-top: 38px;
+        padding-left: 3em;
+        padding-right: 3em;
+        background-color: white;
+        height: auto;
     }
     #menu{
         position: relative;
@@ -315,6 +321,8 @@ figcaption {
         top:-38px;
         overflow: hidden;
         line-height: 30px;
+        right: 16px;
+        margin-right: 5em;
     }
     #menu li{
         float: left;
@@ -328,7 +336,7 @@ figcaption {
         color: white;
         font-weight: bold;
         margin: 0;
-        padding: 4px 6px;
+        padding: 4px 16px;
     }
     #top{
         overflow: hidden;
@@ -337,25 +345,45 @@ figcaption {
         background-color: #dfdfdf;
         border-top: 4px solid black;
         border-bottom: 4px solid black;
+
     }
     #menuToggle:checked  ~ #top {border-bottom: 4px solid black;}
     #header{
         border-top: 3px solid #ffd100;
         border-bottom: 3px solid #ffd100;
+        border-radius: 3px;
     }
     .menu-icon{
         display: none;
     }
+
+
+    #container{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
     .homenav{
+        display: inline-block;
+        margin: 0;
         overflow: hidden;
         height: auto;
-        margin: auto;
+        width: calc(30% - 4px);
+        margin-top: 1em;
     }
-    .picH{
-        float: left;
-        width: 120px;
-        margin-right: 12px;
+    .homenav img{
+        max-width: 100%;
+        height: 250px;
     }
+    .homepic{
+        width: auto;
+        height: auto;
+    }
+    .homenav p{
+        text-align: justify;
+    }
+
     #pic404{
         width: 500px;
     }
