--- a/css/main.css
+++ b/css/main.css
@@ -200,14 +200,14 @@ a:active{
     margin-top: 1em;
 }
 .homenav img{
-    width: auto;
-}
-.homepic{
     width: 250px;
     height: auto;
     margin: auto;
     max-width: 100%;
     margin-bottom: 1.2em;
+}
+.homenav p{
+    text-align: justify;
 }
 
 #pic404{
@@ -363,7 +363,18 @@ figcaption {
     #container{
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: space-around;
+    }
+    #Container{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    #Container div{
+        padding-left: .4em;
+        padding-right: .4em;
+
     }
 
     .homenav{
@@ -375,14 +386,8 @@ figcaption {
     }
     .homenav img{
         max-width: 100%;
-        height: 250px;
-    }
-    .homepic{
         width: auto;
         height: auto;
-    }
-    .homenav p{
-        text-align: justify;
     }
 
     #pic404{
