--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
-  color: #404040;
+  color: white;
   position: relative;
   background: #FFF;
 }
