--- a/css/main.css
+++ b/css/main.css
@@ -256,14 +256,14 @@ img {
 
 footer {
   padding: 30px 0;
-  background: #F5F5F5;
+  background: black;
   border-top: 1px #EAEAEA solid;
   margin-top: 50px;
   font-size: 14px;
 }
 
 footer a {
-  color: #404040;
+  color: white;
 }
 
 footer .list-inline {
