--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ img {
 }
 .navbar-custom .nav .navlinks-container .navlinks-children a {
   display: block;
-  padding: 10px;
+  padding: 0;
   padding-left: 30px;
   background: #f5f5f5;
   text-decoration: none !important;
