--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4184,7 +4184,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
-  background-color: black;
+  background-color: transparent;
   background-image: none;
   border: 0px solid transparent;
   border-radius: 4px;
