--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4414,14 +4414,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: transparent;
 }
 .navbar-default .navbar-toggle {
-  border-color: #ddd;
+  /*border-color: #ddd;*/
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #ddd;
+  background-color: black;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #888;
+  background-color: black;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
