--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4514,7 +4514,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #333;
+  background-color: black;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #fff;
