--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ img {
 .navbar-toggle {
   position: relative;
   float: right;
-  padding: 9px 100px;
+  padding: 9px 10px;
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
@@ -214,6 +214,17 @@ img {
   background-image: none;
   border: 0px solid transparent;
   border-radius: 4px;
+}
+.navbar-default .navbar-toggle {
+  /*border-color: #ddd;*/
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background: black;
+  color: white;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: black;
 }
 
 
