--- a/css/main.css
+++ b/css/main.css
@@ -221,10 +221,14 @@ img {
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background: black;
-  color: white;
 }
+
 .navbar-default .navbar-toggle .icon-bar {
   background-color: black;
+}
+.navbar-default .navbar-toggle .icon-bar:hover,
+.navbar-default .navbar-toggle .icon-bar:focus {
+  color: white;
 }
 
 
