--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,7 @@ img {
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background: black;
+  background: blue;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
