--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,7 @@ img {
   margin-top: 8px;
   margin-right: 15px;
   margin-bottom: 8px;
+  color: black;
   background-color: transparent;
   background-image: none;
   border: 0px solid transparent;
