--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,12 +7,12 @@
         <i class="icon-bar"></i>
         <i class="icon-bar"></i>
       </button>
-      <!-- {% if site.title-img %}
+      {% if site.title-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.title-img }}"/></a>
       {% else %}
         <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
-      {% endif %} -->
-      <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="img/title.PNG"/></a>
+      {% endif %}
+      <!-- <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="img/title.PNG"/></a> -->
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
