--- a/css/main.css
+++ b/css/main.css
@@ -121,22 +121,22 @@ img {
 }
 
 .navbar-custom .navbar-brand-logo {
-  padding-top: 20px;
+  padding-top: 0;
   -webkit-transition: padding .5s ease-in-out;
   -moz-transition: padding .5s ease-in-out;
   transition: padding .5s ease-in-out;
 }
 .navbar-custom .navbar-brand-logo img {
-  height: 40px;
+  height: 50px;
   -webkit-transition: height .5s ease-in-out;
   -moz-transition: height .5s ease-in-out;
   transition: height .5s ease-in-out;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo {
-  padding-top: 0px;
+  padding-top: 20px;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo img {
-  height: 50px;
+  height: 40px;
 }
 
 @media only screen and (min-width: 768px) {
