--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,12 @@ img {
   color: white;
   background: black;
 }
-
+.navbar-custom .navbar-brand-logo img {
+  height: 40px;
+  -webkit-transition: height .5s ease-in-out;
+  -moz-transition: height .5s ease-in-out;
+  transition: height .5s ease-in-out;
+}
 .navbar-custom .navbar-brand-logo {
   padding-top: 0;
   -webkit-transition: padding .5s ease-in-out;
