--- a/css/main.css
+++ b/css/main.css
@@ -121,9 +121,9 @@ img {
 }
 .navbar-custom .navbar-brand-logo img {
   height: 40px;
-  -webkit-transition: height .5s ease-in-out;
+  /*-webkit-transition: height .5s ease-in-out;
   -moz-transition: height .5s ease-in-out;
-  transition: height .5s ease-in-out;
+  transition: height .5s ease-in-out;*/
 }
 .navbar-custom .navbar-brand-logo {
   padding-top: 0;
@@ -133,7 +133,7 @@ img {
 }
 
 .navbar-custom.top-nav-short .navbar-brand-logo {
-  padding-top: 5px;
+  padding-top: 0px;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo img {
   height: 40px;
